@@ -2,6 +2,7 @@ Cobbler CHANGELOG
 
 - XXX - 1.4.3
 - (BUGF) fix OMAPI support's (note: deprecated) usage of subprocess
+- (BUGF) don't traceback on invalid cmd ("cobbler distro list --name=foo")
 
 - XXX - 1.4.2
 - (BUGF) fix WTI power templates
